# whattoeat

./: README.md  audiobook1  dag.py  heaven_blessing_small.txt  hello.R  index.html  manifest.webmanifest  note.txt  package-lock.json  package.json  project.config.json  service-worker.js  tailwind.config.js  tgcf.txt  whattoeat.html
.next/: trace
abi/screen/: test
backend/: pyproject.toml
backend/backend/: llm.py  main.py  mock_llm.py  run_evals.py  run_image_generation_evals.py  video_to_app.py
backend/backend/codegen/: test_utils.py
backend/backend/debug/: DebugFileWriter.py
backend/backend/evals/: core.py  runner.py
backend/backend/image_generation/: core.py
backend/backend/prompts/: __init__.py  imported_code_prompts.py  screenshot_system_prompts.py  test_prompts.py
backend/backend/routes/: evals.py  generate_code.py
backend/backend/video/: utils.py
backend/run_logs/: messages_20250408_124707.json  messages_20250408_125450.json  messages_20250408_130400.json  messages_20250408_130637.json  messages_20250408_130800.json  messages_20250408_130901.json  messages_20250408_131332.json  messages_20250408_131724.json  messages_20250408_132122.json  messages_20250408_132408.json  messages_20250408_132749.json  messages_20250408_133141.json  messages_20250408_133301.json  messages_20250408_133735.json
src/components/layout/: Header.tsx  Layout.tsx
src/pages/: _app.tsx  index.tsx
src/styles/: globals.css
