[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Your Name <your.email@example.com>"]
packages = [{include = "backend"}]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.68.0"
uvicorn = "^0.15.0"
python-dotenv = "^0.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 